feat: add HTTP get storages endpoint
